@@ -508,10 +508,10 @@ s,@ac_ct_STRIP@,,;t t
 s,@INSTALL_STRIP_PROGRAM@,${SHELL} $(install_sh) -c -s,;t t
 s,@AWK@,gawk,;t t
 s,@SET_MAKE@,,;t t
-s,@build@,i686-pc-linux-gnuoldld,;t t
+s,@build@,i686-pc-linux-gnu,;t t
 s,@build_cpu@,i686,;t t
 s,@build_vendor@,pc,;t t
-s,@build_os@,linux-gnuoldld,;t t
+s,@build_os@,linux-gnu,;t t
 s,@host@,mipsel-unknown-linux-gnu,;t t
 s,@host_cpu@,mipsel,;t t
 s,@host_vendor@,unknown,;t t
